rewrote the intro

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,10 +23,8 @@
         <div class="row">
           <div class="col-lg-12 text-left">
             <h2>I am an Software Engineer at <a href='http://www.spatialnetworks.com/'>Spatial Networks</a>, where I work on <a href='http://www.fulcrumapp.com'> Fulcrum</a>.</h2>
-            <p class="lead">I am a graduate of The Iron Yard St Petersburg’s Ruby on Rails program. I am also a former academic, with an MA in Chinese History from Columbia and years of travel and language experience around Asia.</p>
-            <p class="lead"> Professionally, I work on databases and write scripts that manipulate data and load it into a database for financial services web portals in Java and Groovy.
-              My personal projects include converting this page and my blog into a Rails app, working through the problems on<a href='https://exercism.io'> exercism</a> (so far I have made the most progress on the ruby and groovy tracks), and learning React.js and Grails.
-              I am also working on a suite of csv parsing tools in Python called <a href='https://github.com/utumno86/Asparagus'>Asparagus</a>.
+            <p class="lead">I am a full-stack web software developer with an academic background in Chinese History. I currently work in both React/Javascript and Ruby on Rails, with some Python scripting and Docker work as well. I graduated from The Iron Yard code school in St. Petersburg (now the Suncoast Developers Guild) in August 2015. I am also enrolled part-time in the Georgia Tech Online Master of Science in Computer Science degree program.</p>
+            <p class="lead"> In addiiton to my full time professional work, my coding side projects include learning <a href="https://github.com/utumno86/GoTutorial/blob/master/mutex/main.go">Go</a>, <a href="https://github.com/utumno86/elixir_pheonix_tutorial/blob/master/discuss/web/channels/comments_channel.ex">Elixir</a>, <a href="https://github.com/utumno86/JSMachineLearning/blob/master/MLKits/regressions/linear-regression/index.js">Machine Learning/TensorFlow</a>, and <a href="https://github.com/utumno86/Arduino_Stuff/blob/master/RGB%20LED/CombiningColors/CombiningColors.ino"> IoT projects</a>.
             <p>Programming Languages:</p>
             <ul>
               <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/ruby/run-length-encoding/run_length_encoding.rb'>Ruby</a></li>
