updated the ruby code examples

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,16 +27,15 @@
             <p class="lead"> In addiiton to my full time professional work, my coding side projects include learning <a href="https://github.com/utumno86/GoTutorial/blob/master/mutex/main.go">Go</a>, <a href="https://github.com/utumno86/elixir_pheonix_tutorial/blob/master/discuss/web/channels/comments_channel.ex">Elixir</a>, <a href="https://github.com/utumno86/JSMachineLearning/blob/master/MLKits/regressions/linear-regression/index.js">Machine Learning/TensorFlow</a>, and <a href="https://github.com/utumno86/Arduino_Stuff/blob/master/RGB%20LED/CombiningColors/CombiningColors.ino"> IoT projects</a>.
             <p>Programming Languages:</p>
             <ul>
-              <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/ruby/run-length-encoding/run_length_encoding.rb'>Ruby</a></li>
+              <li><a href="https://github.com/utumno86/SoutheastRubyWebFramework/blob/master/roolz/lib/roolz.rb">Ruby</a></li>
                 <ul>
-                  <li>Rails (see examples below)</li>
-                  <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/views/wrestlers/index.slim'>Slim/Haml</a></li>
-                  <li><a href='https://github.com/utumno86/the_rspec_book/blob/master/code_breaker/spec/marker_spec.rb'>RSpec</a></li>
-                  <li><a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb">JSON APIs</a></li>
+                  <li><a href="https://github.com/utumno86/wedding/blob/master/app/controllers/guest_controller.rb">Rails</a></li>
+                  <li><a href='https://github.com/utumno86/BDD_Tutorial/blob/master/blog_app/spec/features/adding_comments_spec.rb'>RSpec/Minitest</a></li>
+                  <li><a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb">REST APIs</a></li>
                 </ul>
               <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/javascript/anagram/anagram.js'>Javascript</a></li>
                 <ul>
-                  <li><a href='https://github.com/utumno86/bloggertron/blob/master/app/assets/javascripts/application.js'>ajax/JQuery</a></li>
+                  <li><a href='https://github.com/utumno86/ReactTutorial/blob/master/server/client/src/components/surveys/SurveyList.js'>React</a></li>
                   <li><a href='https://github.com/utumno86/LearnYouNode/blob/master/juggling.js'>Node.js</a></li>
                   <li><a href='https://github.com/utumno86/ember-note'>Ember.js</a></li>
                 </ul>
@@ -44,25 +43,7 @@
                 <ul>
                   <li><a href='https://github.com/utumno86/testing'>django</a></li>
                 </ul>
-              <li>HTML/CSS</li>
-                <ul>
-                  <li><a href='https://github.com/utumno86/twixter/blob/master/app/views/twixts/index.html.erb'>Twitter Bootstrap</a></li>
-                  <li><a href='https://github.com/utumno86/bloggertron/blob/master/app/views/posts/index.html.erb'> Zurb Foundation</a></li>
-                  <li><a href='https://github.com/utumno86/CreamOfTheCrop/blob/master/app/assets/stylesheets/application.css.scss'> Sass/SCSS</a></li>
-                </ul>
-              <li>Java</li>
-                <ul>
-                  <li><a      href='https://github.com/utumno86/grab_bag/blob/master/brew-cask-update.groovy'>Groovy</a></li>
-                </ul>
-              <li> Dev Ops</li>
-                <ul>
-                  <li><a
-                    href='https://github.com/utumno86/grab_bag/blob/master/brew-cask-update.sh'>Shellscript</a>
-                  </li>
-                  <li>
-                    <a href = 'https://github.com/utumno86/grab_bag/blob/master/awkcommands.awk'>Awk</a>
-                  </li>
-                </ul>
+              </li>
             </ul>
             <p>I am also proficient in SQL, using Oracle and Postgres databases, Git, deployment to Heroku, as well as in Chinese langauge, history, and economics topics.</p>
           </div>
