updated javascript links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,11 +33,13 @@
                   <li><a href='https://github.com/utumno86/BDD_Tutorial/blob/master/blog_app/spec/features/adding_comments_spec.rb'>RSpec/Minitest</a></li>
                   <li><a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb">REST APIs</a></li>
                 </ul>
-              <li><a href='https://github.com/utumno86/exercism_exercises/blob/master/javascript/anagram/anagram.js'>Javascript</a></li>
+              <li><a href='https://github.com/utumno86/JSMachineLearning/blob/master/MLKits/plinko/score.js'>Javascript</a></li>
                 <ul>
                   <li><a href='https://github.com/utumno86/ReactTutorial/blob/master/server/client/src/components/surveys/SurveyList.js'>React</a></li>
-                  <li><a href='https://github.com/utumno86/LearnYouNode/blob/master/juggling.js'>Node.js</a></li>
-                  <li><a href='https://github.com/utumno86/ember-note'>Ember.js</a></li>
+                  <li><a href='https://github.com/utumno86/ReactTutorial/blob/master/server/client/src/reducers/index.js'>Redux</a></li>
+                  <li><a href='https://github.com/utumno86/ReactTutorial/blob/master/server/routes/surveyRoutes.js'>Express.js</a></li>
+                  <li><a href='https://github.com/utumno86/react_native_tutorial/blob/master/tech_stack/src/components/LibraryList.js'>React Native</a></li>
+                  <li><a href='https://github.com/utumno86/typescript_tutorial/blob/master/fetchjson/index.ts'>Typescript</a></li>
                 </ul>
                   <li><a href='https://github.com/utumno86/Asparagus/blob/master/nameeraserconverter.py'>Python</a></li>
                 <ul>
