updated python links

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,9 +41,9 @@
                   <li><a href='https://github.com/utumno86/react_native_tutorial/blob/master/tech_stack/src/components/LibraryList.js'>React Native</a></li>
                   <li><a href='https://github.com/utumno86/typescript_tutorial/blob/master/fetchjson/index.ts'>Typescript</a></li>
                 </ul>
-                  <li><a href='https://github.com/utumno86/Asparagus/blob/master/nameeraserconverter.py'>Python</a></li>
+                  <li><a href='https://github.com/utumno86/8PythonProjects/blob/master/TerminalBlog/models/menu.py'>Python</a></li>
                 <ul>
-                  <li><a href='https://github.com/utumno86/testing'>django</a></li>
+                  <li><a href='https://github.com/utumno86/PricingService/blob/master/models/alert.py'>Flask</a></li>
                 </ul>
               </li>
             </ul>
