revised the portfolio display

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,20 +62,20 @@
           <div class="row">
             <div class="col-md-6">
               <div class="portfolio-item">
-                <h3>Cream of the Crop</h3>
-                <h6>Iron Yard Final Project</h6>
-                <h6>The most interesting bit is match generation <a href="https://github.com/utumno86/CreamOfTheCrop/blob/master/app/models/match.rb"> here.</a></h6>
-                <a href="http://creamofthecrop.herokuapp.com/">
-                  <%= image_tag 'portfolio-1.png', class: "img-portfolio img-responsive"%>
-                </a>
+                <h3>Ryma -- Luggage Tracking</h3>
+                  <h6>Built for Hack Hospitality Hackathon August 2017</h6>
+                  <h6> Check out the rails 5 API<a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb"> here.</a></h6>
+                  <a href="http://ryma.herokuapp.com/">
+                  <%= image_tag 'portfolio-4.png', class: "img-portfolio img-responsive"%>
+                  </a>
               </div>
             </div>
           <div class="col-md-6">
             <div class="portfolio-item">
-              <h3> Twixter</h3>
-              <h6> Iron Yard Project with Duncan Neal</h6>
-              <h6> The most interesting bit is use of the acts_as_followable gem for a Timeline<a href="https://github.com/utumno86/twixter/blob/master/app/controllers/users_controller.rb"> here.</a></h6>
-                <a href="http://twixter.herokuapp.com/">
+              <h3> Pricing Service</h3>
+              <h6> Flask/Python Project to Set Up a Service for Watching Website prices</h6>
+              <h6> The most interesting bit is alert notifications <a href="https://github.com/utumno86/PricingService/blob/master/models/alert.py"> here.</a></h6>
+                <a href="https://pricing-service-mnash.herokuapp.com/">
                   <%= image_tag 'portfolio-2.png', class: "img-portfolio img-responsive"%>
                 </a>
               </div>
@@ -90,15 +90,16 @@
                   </a>
                 </div>
               </div>
-            <div class="col-md-6">
+              <div class="col-md-6">
               <div class="portfolio-item">
-                <h3>Ryma -- Luggage Tracking</h3>
-                  <h6>Built for Hack Hospitality Hackathon August 2017</h6>
-                  <h6> Check out the rails 5 API<a href="https://github.com/utumno86/ryma/blob/master/app/controllers/api/guests_controller.rb"> here.</a></h6>
-                  <a href="http://ryma.herokuapp.com/">
-                  <%= image_tag 'portfolio-4.png', class: "img-portfolio img-responsive"%>
-                  </a>
+                <h3>Cream of the Crop</h3>
+                <h6>Iron Yard Final Project</h6>
+                <h6>The most interesting bit is match generation <a href="https://github.com/utumno86/CreamOfTheCrop/blob/master/app/models/match.rb"> here.</a></h6>
+                <a href="http://creamofthecrop.herokuapp.com/">
+                  <%= image_tag 'portfolio-1.png', class: "img-portfolio img-responsive"%>
+                </a>
               </div>
+            </div>
             </div>
           </div>
         </div>
