cleared out some extraneous crap

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
     <a href="#contact" class="btn btn-dark btn-lg">Contact Me</a>
     <br>
     <br>
-    <a href="https://s3.amazonaws.com/nashresume/Resumev7.pdf" class="btn btn-dark btn-lg">My Resume(PDF)</a>
+    <a href="https://s3.amazonaws.com/nashresume/Resumev7.pdf" class="btn btn-dark btn-lg">My Resume</a>
   </div>
 </header>
 
@@ -111,11 +111,6 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <a href="https://gist.github.com/utumno86/6646933ccabeda5f004b" class="btn btn-lg btn-dark">My Resume(.md)</a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 text-center">
         <a href="https://www.youtube.com/watch?v=0heOms7DK6s&feature=youtu.be" class="btn btn-lg btn-dark">Cream of the Crop Demo</a>
       </div>
     </div>
@@ -138,7 +133,6 @@
             <br>
             <ul class="list-inline">
               <li><a href="https://github.com/utumno86"><i class="fa fa-github fa-fw fa-3x"></i></a></li>
-              <li><a href="https://utumno86.wordpress.com/"><i class="fa fa-wordpress fa-fw fa-3x"></i></a></li>
               <li><a href="https://twitter.com/utumno86"><i class="fa fa-twitter fa-fw fa-3x"></i></a></li>
               <li><a href="https://www.linkedin.com/in/michaelearlnash"><i class="fa fa-linkedin fa-fw fa-3x"></i></a></li>
             </ul>
