--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,12 +6,12 @@
   <div class="text-vertical-center">
     <h1>Michael E. Nash</h1>
     <h2>（許書聖）</h2>
-    <h3>Integration Developer</h3>
+    <h3>Senior Software Engineer</h3>
     <br>
     <a href="#contact" class="btn btn-dark btn-lg">Contact Me</a>
     <br>
     <br>
-    <a href="https://nashresume.s3.amazonaws.com/Resumev10.pdf" class="btn btn-dark btn-lg">My Resume</a>
+    <a href="https://nashresume.s3.amazonaws.com/Resumev11.pdf" class="btn btn-dark btn-lg">My Resume</a>
   </div>
 </header>
 
@@ -22,8 +22,8 @@
       <%= image_tag 'callout.jpg', class: "img-responsive profile"%>
         <div class="row">
           <div class="col-lg-12 text-left">
-            <h2>I am an Software Engineer at <a href='http://www.spatialnetworks.com/'>Spatial Networks</a>, where I work on <a href='http://www.fulcrumapp.com'> Fulcrum</a>.</h2>
-            <p class="lead">I am a full-stack web software developer with an academic background in Chinese History. I currently work in both React/Javascript and Ruby on Rails, with some Python scripting and Docker work as well. I graduated from The Iron Yard code school in St. Petersburg (now the Suncoast Developers Guild) in August 2015. I am also enrolled part-time in the Georgia Tech Online Master of Science in Computer Science degree program.</p>
+            <h2>I am an  Senior Software Engineer at <a href='http://www.spectrio.com/'>Spectrio</a>, where I work on <a href='https://cloud.spectrio.com/'> Spectrio Cloud</a> and <a href="https://app.10footwave.com/"> Spectrio Engage Digital Signage</a>.</h2>
+            <p class="lead">I am a full-stack web software developer with an academic background in Chinese History. I currently work in both React/Javascript and Ruby on Rails, with some Python scripting and Docker work as well. I graduated from The Iron Yard code school in St. Petersburg (now the Suncoast Developers Guild) in August 2015.  I also have experience with Python, Docker, Heroku and Amazon Web Services. </p>
             <p class="lead"> In addiiton to my full time professional work, my coding side projects include learning <a href="https://github.com/utumno86/GoTutorial/blob/master/mutex/main.go">Go</a>, <a href="https://github.com/utumno86/elixir_pheonix_tutorial/blob/master/discuss/web/channels/comments_channel.ex">Elixir</a>, <a href="https://github.com/utumno86/JSMachineLearning/blob/master/MLKits/regressions/linear-regression/index.js">Machine Learning/TensorFlow</a>, and <a href="https://github.com/utumno86/Arduino_Stuff/blob/master/RGB%20LED/CombiningColors/CombiningColors.ino"> IoT projects</a>.
             <p>Programming Languages:</p>
             <ul>
@@ -125,7 +125,7 @@
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1 text-center">
             <h4><strong>Michael E. Nash</strong></h4>
-            <p>Tampa, FL</p>
+            <p>Temple Terrace, FL</p>
             <ul class="list-unstyled">
               <li><i class="fa fa-phone fa-fw"></i> (813) 326-4637</li>
               <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:utumno86@gmail.com">utumno86@gmail.com</a></li>
